Fix issues with visibility toggle

--- a/projects/ccf-rui/src/app/shared/components/opacity-slider/opacity-slider.component.scss
+++ b/projects/ccf-rui/src/app/shared/components/opacity-slider/opacity-slider.component.scss
@@ -24,8 +24,12 @@
       display: flex;
       align-items: center;
 
-      mat-slider {
+      .slider {
         width: 100%;
+        
+        &.disabled {
+          pointer-events: none;
+        }
       }
 
       .opacity-value {
